--- a/Isoya.tex
+++ b/Isoya.tex
@@ -134,7 +134,7 @@ pdfpagemode=UseThumbs,   % サムネイル表示
 
 続いて，離心率の分布をみると，小惑星帯は0から0.3まで均等に分布している（図 \ref{fig:obs_ecc} 左参照）．
 
-一方カイパーベルトでは，3:2の尽数関係の位置で0.1から0.3までに集中しており，また3:2と2:1の尽数関係の間の領域では0から0.2までに集中している．さらに，大多数の小天体が海王星と軌道交差しない領域にいる中で，3:2の尽数関係の位置には軌道交差しているものが比較的多く存在する（図 \ref{fig:obs_ecc} 右参照）．
+一方カイパーベルトでは，3:2の尽数関係の位置で0.1から0.3までに集中しており，また3:2と2:1の尽数関係の間の領域では0から0.2までに集中している．また曲線は，近日点距離が海王星の軌道長半径と一致するときの，軌道長半径と離心率の関係を表しており，大多数の小天体が海王星と軌道交差しない領域にいる中で，3:2の尽数関係の位置には軌道交差しているものが比較的多く存在する（図 \ref{fig:obs_ecc} 右参照）．
 
 \begin{figure}[H]
 \begin{tabular}{ccc}
@@ -180,7 +180,11 @@ pdfpagemode=UseThumbs,   % サムネイル表示
 \caption{小惑星帯領域（左）とカイパーベルト領域（右）の小天体の軌道傾斜角．\label{fig:obs_inc}}
 \end{figure}
 
-上で述べたような小天体の軌道の特徴を説明するために，巨大惑星（木星，土星，天王星，海王星）が現在の軌道長半径とは異なる場所で生まれ，時間をかけて移動し，現在の軌道長半径になったとするモデルが提唱され，惑星移動に関する研究が行われてきた．すなわち，小惑星帯やカイパーベルトには太陽系の惑星移動の痕跡が残されており，小天体の特徴的な分布がどのように作られたのかについて理解することは，太陽系の歴史を探ることにつながると考えられる．
+上で述べたような小天体の軌道の特徴を説明するために，巨大惑星（木星，土星，天王星，海王星）が現在の軌道長半径とは異なる場所で生まれ，時間をかけて移動し，現在の軌道長半径になったとするモデルが提唱され，惑星移動に関する研究が行われてきた．
+
+
+
+すなわち，小惑星帯やカイパーベルトには太陽系の惑星移動の痕跡が残されており，小天体の特徴的な分布がどのように作られたのかについて理解することは，太陽系の歴史を探ることにつながると考えられる．
 
 
 \chapter{天体力学の基礎}
