--- a/Isoya.tex
+++ b/Isoya.tex
@@ -108,7 +108,7 @@ pdfpagemode=UseThumbs,   % サムネイル表示
 
 これらの小天体の軌道の特徴について，多くの観測事実が存在する．以下に示す観測データは IAU Minor Planet Center - MPC Database Search\footnote{\url{http://www.minorplanetcenter.net/db_search}}から引用し，直径が50\ km以上の比較的大きな小天体を選んでいる．
 
-軌道長半径がおよそ2AUから4AUまでの範囲を小惑星帯と呼び，火星と木星の軌道の間に存在する．軌道長半径に対する個数分布は，小天体の周期と木星の周期が尽数関係になる位置で大きなギャップが存在する（図 \ref{fig:obs_histogram} 左参照）．この周期が尽数関係になるとき，後に紹介する「平均運動共鳴」が起こる．
+軌道長半径がおよそ2AUから4AUまでの範囲を小惑星帯と呼び，火星と木星の軌道の間に存在する．軌道長半径に対する個数分布は，小天体の周期と木星の周期が尽数関係になる位置で大きなギャップが存在する（図 \ref{fig:obs_histogram} 左参照）．この周期が尽数関係になるとき，後に紹介する「平均運動共鳴」が起こる．また，各共鳴の間の領域で，内側にいくほど個数が減っているように見える．
 
 一方，軌道長半径がおよそ30AUから60AUまでの範囲をカイパーベルトと呼び，海王星よりも外側に存在する．軌道長半径に対する個数分布は，海王星の周期と小天体の周期が特に3:2の尽数関係となる位置で多くの小天体が見つかっており，他の尽数関係の位置にはそれほど多く見つかっていない（図 \ref{fig:obs_histogram} 右参照）．
 
@@ -131,6 +131,9 @@ pdfpagemode=UseThumbs,   % サムネイル表示
 \end{tabular}
 \caption{小惑星帯領域（左）とカイパーベルト領域（右）の小天体の軌道長半径に対する個数分布．各ビンの幅は，小惑星帯：0.03AU，カイパーベルト：0.3AUとしている．\label{fig:obs_histogram}}
 \end{figure}
+
+（個数分布の数値計算結果は小惑星帯：図 \ref{fig:asteroid_histogram_5Myr} ，カイパーベルト：図 \ref{fig:kuiper_histogram_20Myr} で説明している．）
+\\
 
 続いて，離心率の分布をみると，小惑星帯は0から0.3まで均等に分布している（図 \ref{fig:obs_ecc} 左参照）．
 
@@ -156,6 +159,9 @@ pdfpagemode=UseThumbs,   % サムネイル表示
 \caption{小惑星帯領域（左）とカイパーベルト領域（右）の小天体の離心率．また近日点距離が $30 {\rm AU}$ と一致するときの，軌道長半径と離心率の関係を曲線で表している．\label{fig:obs_ecc}}
 \end{figure}
 
+（離心率の数値計算結果は小惑星帯：図 \ref{fig:asteroid_ecc_inc_5Myr} 左，カイパーベルト：図 \ref{fig:kuiper_ecc_inc_20Myr} 左で説明している．）
+\\
+
 最後に，軌道傾斜角の分布をみると，先ほどと同様に，小惑星帯は0から0.3\ radまで均等に分布している（図 \ref{fig:obs_inc} 左参照）．
 
 一方カイパーベルトでは，3:2の尽数関係の位置では0から0.6\ radまで均等に分布しているが，42AUから2:1の尽数関係の位置までの領域では0から0.1\ radに集中している．また，軌道長半径が40AUから42AU，軌道傾斜角が0から0.2\ radの領域で，明らかに小天体の数が少ない（図 \ref{fig:obs_inc} 右参照）．
@@ -180,13 +186,14 @@ pdfpagemode=UseThumbs,   % サムネイル表示
 \caption{小惑星帯領域（左）とカイパーベルト領域（右）の小天体の軌道傾斜角．\label{fig:obs_inc}}
 \end{figure}
 
+（軌道傾斜角の数値計算結果は小惑星帯：図 \ref{fig:asteroid_ecc_inc_5Myr} 右，カイパーベルト：図 \ref{fig:kuiper_ecc_inc_20Myr} 右で説明している．）
+\\
+
 上で述べたような小天体の軌道の特徴を説明するために，巨大惑星（木星，土星，天王星，海王星）が現在の軌道長半径とは異なる場所で生まれ，時間をかけて移動し，現在の軌道長半径になったとするモデルが提唱され，惑星移動に関する研究が行われてきた．
 
-Malhotraは，カイパーベルトのうち海王星と3:2の尽数関係となる軌道長半径の小天体について，惑星移動を考えたときの離心率と軌道傾斜角の変化について詳しく数値計算をした\cite{Malhotra}．彼が用いた惑星移動モデルは，木星を内側へ0.2AU，土星を外側へ0.8AU，天王星を外側へ3.0AU，海王星を外側へ7.0AU移動させるものである．
+Malhotraは，カイパーベルトのうち海王星と3:2の尽数関係となる軌道長半径の小天体について，惑星移動を考えたときの離心率と軌道傾斜角の変化について詳しく数値計算をした\cite{Malhotra}．彼が用いた惑星移動モデルは，木星を内側へ0.2AU，土星を外側へ0.8AU，天王星を外側へ3.0AU，海王星を外側へ7.0AU移動させるものである．このモデルの移動距離のうち天王星と海王星は，Fernandezらによる天王星と海王星の２つの惑星と微惑星との角運動量交換を考えたときの数値計算\cite{Fernandez}の範囲内にある．さらに，海王星と3:2の尽数関係となる軌道長半径で小天体の離心率を0.3まで上げるには，海王星の移動距離は最低でも5AU必要であると結論づけている．
 
-この軌道長半径で小天体の離心率を0.3まで上げるには
-
-
+Mintonらは，Malhotraと同じ惑星移動モデルを使い，小惑星帯の小天体について詳しく数値計算をした\cite{Minton}．彼らは木星と尽数関係となる軌道長半径でギャップが形成されることを確かめ，また内側にいくほど個数が減っているように見えることの原因として，後に紹介する土星の「永年共鳴」が通過することを挙げた．この土星の永年共鳴が小惑星帯を通過したと考えると，土星の移動距離に強い制約をつけることができるだろうと結論づけている．
 
 すなわち，小惑星帯やカイパーベルトには太陽系の惑星移動の痕跡が残されており，小天体の特徴的な分布がどのように作られたのかについて理解することは，太陽系の歴史を探ることにつながると考えられる．
 
@@ -2545,7 +2552,7 @@ e_{\rm forced} = \sqrt{h_0^2 + k_0^2}, \quad I_{\rm forced} = \sqrt{p_0^2 + q_0^
 \end{equation}
 と定義される．
 
-(\ref{eq:h_0_4planet}) 式から (\ref{eq:q_0_4planet}) 式より，$A$ の値が $g_i$，$B$ の値が $f_i$ と一致する場合に発散が生じることは明らかである．図 \ref{fig:PrecessionRate} は，それぞれの惑星の固有振動数 $g_i, f_i$と，テスト粒子の $A = g_t, B = f_t$ を軌道長半径の関数としてプロットしたものである．添字については，$t : テスト粒子$，$5 : 木星$，$6 : 土星$，$7 : 天王星$，$8 : 海王星$ としている（太陽系第 $i$ 惑星に対応させている）．(\ref{eq:A_test_4planet}) 式，(\ref{eq:B_test_4planet}) 式の定義より，中心星を質点と扱う場合 $A = - B$ であるから，$g_t, - f_t$ は重なっている．
+(\ref{eq:h_0_4planet}) 式から (\ref{eq:q_0_4planet}) 式より，$A$ の値が $g_i$，$B$ の値が $f_i$ と一致する場合に発散が生じることは明らかである．図 \ref{fig:PrecessionRate} は，それぞれの惑星の固有振動数 $g_i, f_i$（定数）と，テスト粒子の $A = g_t, B = f_t$ を軌道長半径の関数としてプロットしたものである．添字については，$t : テスト粒子$，$5 : 木星$，$6 : 土星$，$7 : 天王星$，$8 : 海王星$ としている（太陽系第 $i$ 惑星に対応させている）．(\ref{eq:A_test_4planet}) 式，(\ref{eq:B_test_4planet}) 式の定義より，中心星を質点と扱う場合 $A = - B$ であるから，$g_t, - f_t$ は重なっている．
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{./image/PrecessionRate_logAB.pdf}
@@ -2727,8 +2734,10 @@ e_{\rm forced} = \sqrt{h_0^2 + k_0^2}, \quad I_{\rm forced} = \sqrt{p_0^2 + q_0^
 \caption{$t = 2 \times 10^7\ {\rm yr}$ におけるテスト粒子と海王星の離心率（左）と軌道傾斜角（右）．\label{fig:kuiper_ecc_inc_20Myr}}
 \end{figure}
 
-これらの図から，平均運動共鳴の位置で確かに離心率と軌道傾斜角が上がることが分かる．そして，海王星と軌道交差する離心率まで上げられた場合，海王星と近接遭遇してヒル圏内に入るか双曲線軌道になる粒子がほとんどである．軌道交差をしているにも関わらず軌道が安定化している粒子は，少ない数ではあるが存在しており，これは観測データの特徴と一致する．
+（カイパーベルトの観測データは離心率：図 \ref{fig:obs_ecc} 右，軌道傾斜角：図 \ref{fig:obs_inc} 右で説明している．）
+\\
 
+これらの図から，平均運動共鳴の位置で小天体が捕獲され，確かに離心率と軌道傾斜角が上がることが分かる．そして，海王星と軌道交差する離心率まで上げられた場合，ほとんどの粒子が海王星と近接遭遇してヒル圏内に入るか双曲線軌道になる．軌道交差をしているにも関わらず軌道が安定化している粒子は，少ない数ではあるが存在しており，これは観測データの特徴と一致する．さらに，2:1共鳴の位置では離心率，軌道傾斜角が小さいものがほとんどいなくなり，数が減らされている効果が見られる．また，観測データのうち軌道傾斜角で見られた，40AUから42AUの範囲で粒子が少ないという特徴も一致する．
 
 以下の図は時間 $t = 0\ {\rm yr}, 1 \times 10^3\ {\rm yr}, 1 \times 10^4\ {\rm yr}, 1 \times 10^5\ {\rm yr}, 1 \times 10^6\ {\rm yr}, 1 \times 10^7\ {\rm yr}, 2 \times 10^7\ {\rm yr}$ におけるテスト粒子の軌道長半径に対する個数分布をプロットしたものである．
 
@@ -2774,7 +2783,8 @@ e_{\rm forced} = \sqrt{h_0^2 + k_0^2}, \quad I_{\rm forced} = \sqrt{p_0^2 + q_0^
 \caption{$t = 2 \times 10^7\ {\rm yr}$ におけるテスト粒子の軌道長半径に対する個数分布．\label{fig:kuiper_histogram_20Myr}}
 \end{figure}
 
-
+（カイパーベルトの個数分布の観測データは図 \ref{fig:obs_histogram} 右で説明している．）
+\\
 
 
 \subsection{小惑星帯}
@@ -2903,6 +2913,8 @@ e_{\rm forced} = \sqrt{h_0^2 + k_0^2}, \quad I_{\rm forced} = \sqrt{p_0^2 + q_0^
 \caption{$t = 5 \times 10^6\ {\rm yr}$ におけるテスト粒子と木星の離心率（左）と軌道傾斜角（右）．\label{fig:asteroid_ecc_inc_5Myr}}
 \end{figure}
 
+（小惑星帯の観測データは離心率：図 \ref{fig:obs_ecc} 左，軌道傾斜角：図 \ref{fig:obs_inc} 左で説明している．）
+\\
 
 
 
@@ -2944,28 +2956,41 @@ e_{\rm forced} = \sqrt{h_0^2 + k_0^2}, \quad I_{\rm forced} = \sqrt{p_0^2 + q_0^
 \caption{$t = 5 \times 10^6\ {\rm yr}$ におけるテスト粒子の軌道長半径に対する個数分布．\label{fig:asteroid_histogram_5Myr}}
 \end{figure}
 
+（小惑星帯の個数分布の観測データは図 \ref{fig:obs_histogram} 左で説明している．）
+\\
 
 
+\section{今後の課題}
+全計算時間について，カイパーベルト領域で2000万年分，小惑星帯領域で500万年分しか計算しておらず，太陽系の年齢（約46億年）を考えると短い．特に小惑星帯領域は，もう少し長い計算をすれば平均運動共鳴の位置で粒子が減らされる効果をはっきりと見ることができたと考えられる．
 
-\section{計算コードの見直し}
+本研究に用いた「４次のエルミート法」，「独立タイムステップ」の計算コードは，カイパーベルト領域の計算にはそれほど時間がかからないが，小惑星帯領域の計算ではとても時間がかかった．具体的には，カイパーベルト領域にテスト粒子100個を用意して2000万年分計算すると約7時間，小惑星帯領域にテスト粒子100個を用意して500万年分計算すると約160時間であった（500万年分あたりの計算時間では約91.4倍異なる）．これは小惑星帯とカイパーベルトは軌道長半径が20倍ほど異なり，軌道周期が約89.4倍異なることを考慮すると妥当である．しかし，試しに小惑星帯でテスト粒子の数を変えて1万年分だけ計算を行い，粒子数と実行時間の関係をプロットすると，べきが変化していることが分かった（図 \ref{fig:Nbody_test} 参照）．
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{./image/Nbody_test.pdf}
-\caption{\label{}}
+\caption{小惑星帯にテスト粒子をN個用意して1万年分計算したときの粒子数と実行時間の関係．実行時間$T \propto N^{\gamma}$ と仮定し，$N = 1 - 10, 10 - 50, 50 - 1000$ の３つの範囲でフィッティングした． \label{fig:Nbody_test}}
 \end{figure}
+粒子数が増えるに従ってべきが大きくなっている．つまりこの計算コードでは，一度に1000個のテスト粒子で計算するよりも，10個のテスト粒子の計算を100回した方が約50倍早いことが分かる．
 
-\section{議論}
+このままのコードを使って小惑星帯について詳しく数値計算をするとした場合，計算時間と粒子数の兼ね合いを考えると，先行研究のようにパラメータを変えていくつもの数値計算を比較検証していくことは厳しいと思われる．コードを並列計算向けにしたり，または新しくN体計算のオープンソースコードを試すなどして，この問題に取り組んでいきたい．
 
-\section{まとめ}
+\section{まとめと議論}
+先行研究のような惑星移動モデルを模擬し数値計算を行うことで，観測で見られるような，小惑星帯領域とカイパーベルト領域の小天体の特徴的な分布をある程度再現できることが分かった．これらの領域には太陽系の惑星移動の痕跡が残されているため，惑星の移動距離や質量変化などのさまざまなパラメータを決定していく上で，観測による新たな小天体の発見と，より観測にフィットする惑星移動モデルを用いた数値計算の両方が必要となる．
+
+
+\section*{謝辞}
+本卒業論文は筆者が名古屋大学理学部物理学科理論宇宙物理学研究室（Ta研）に在籍中の研究成果をまとめたものである．指導教官としてご指導を戴いた小林浩助教をはじめ，犬塚修一郎教授，井上剛志准教授に深謝の意を表する．また日頃より有益なご討論ご助言を戴いた同研究室の先輩方，同期に感謝の意を表する．
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{thebibliography}{9}
-  \bibitem{Minton} Minton, D. A. and Malhotra, R. 2009, A record of planet migration in the main asteroid belt
-  \bibitem{Malhotra} Malhotra, R. 1995, The Origin of Pluto's Orbit: Implications for the Solar System Beyond Neptune
-  \bibitem{SSD} Carl D. Murray and Stanley F. Dermott 1999, Solar System Dynamics
-  \bibitem{simulation} 富坂幸治, 花輪知幸, 牧野淳一郎 2007, シリーズ現代の天文学 14 シミュレーション天文学
-  \bibitem{tenntai} 木下宙 1998, 天体と軌道の力学
+  \bibitem{Minton} Minton, D. A. \& Malhotra, R., 2009. A record of planet migration in the main asteroid belt. {\it Nature} {\bf 457}, 1109-1111
+  \bibitem{Malhotra} Malhotra, R., 1995. The Origin of Pluto's Orbit: Implications for the Solar System Beyond Neptune. {\it Astron. J.} {\bf 110}, 420 - 429.
+  \bibitem{Fernandez} Fernandez, J. A. \& Ip, W. H., 1984. Some dynamical aspects of the accretion of Uranus and Neptune - The exchange of orbital angular momentum with planetesimals. {\it Icarus} {\bf 58}, 109 - 120.
+  \bibitem{SSD} Carl D. Murray \& Stanley F. Dermott, 1999. Solar System Dynamics. {\it Cambridge University Press}
+  \bibitem{Kobayashi} 小林浩, 2008. 太陽系外縁天体の起源と進化. {\it 遊・星・人：日本惑星科学会誌} {\bf 17(1)}, 22 - 28.
+  \bibitem{Nagasawa} 長沢真樹子, 2008. 永年共鳴と惑星系の進化. {\it 遊・星・人：日本惑星科学会誌} {\bf 17(4)}, 223 - 231.  
+  \bibitem{simulation} 富坂幸治, 花輪知幸, 牧野淳一郎, 2007. シリーズ現代の天文学 14 シミュレーション天文学. {\it 日本評論社}
+  \bibitem{tenntai} 木下宙, 1998. 天体と軌道の力学. {\it 東京大学出版会}
 
   
 \end{thebibliography}
