--- a/Isoya.tex
+++ b/Isoya.tex
@@ -19,7 +19,7 @@
 \usepackage{indentfirst}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\lhead{\rightmark}d
+\lhead{\rightmark}
 \cfoot{\thepage}
 \setlength{\headheight}{16pt}
 \renewcommand{\chaptermark}[1]{\markboth{第\ \normalfont\thechapter\ 章~#1}{}}
