--- a/Isoya.tex
+++ b/Isoya.tex
@@ -90,7 +90,7 @@ pdfpagemode=UseThumbs,   % サムネイル表示
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \title{巨大惑星の移動に伴う小天体の力学的進化\\
 - 共鳴現象から太陽系の歴史を探る -}
-\date{\today}
+\date{平成29年2月28日}
 \department{
 名古屋大学 理学部物理学科 4年\\
 理論宇宙物理学研究室 (Ta 研)
